@@ -244,8 +244,7 @@ div.boxtitle
   color: #333333;
   font-size: 11px;
   font-weight: bold;
-  background-color: #EBEBEB;
-  background-image: url(images/listheader_aqua.gif); 
+  background: url('images/listheader.gif') top left repeat-x #CCC;
 }
 
 div.settingsbox
